Manufacturing Template Left-nav Scrollbar and Related Tags Position fix
Manufacturing Template Left-nav Scrollbar and Related Tags Position fix

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/prev-next-topic.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/prev-next-topic.less
@@ -2,7 +2,7 @@
   .gu-pre-next-wrapper {
     display: flex;
     justify-content: space-between;
-    margin: 0.75rem 0;
+    padding: 0.75rem 0;
   }
 
   .gu-pre-topic_container,
@@ -56,6 +56,7 @@
   @media (max-width: 1023px) {
     .gu-pre-next-wrapper {
       margin: 0.75rem 1rem;
+      padding: 0;
     }
   }
 
